# PP_P3

./: README.md
lab_3/: CMakeLists.txt  create_mp4.sh
lab_3/benchmark_lab1/: CMakeLists.txt  benchmark.cpp
lab_3/benchmark_lab2/: CMakeLists.txt  benchmark.cpp
lab_3/cmake/: ProjectLibraries.cmake  VisualStudio.cmake
lab_3/input/: test_five_ppws24_D75C_universe_after_50_epochs.txt  test_five_ppws24_D75C_universe_after_calculate_positions.txt  test_five_ppws24_D75C_universe_after_calculate_velocities.txt  test_four_ppws24_Z9RJ4_universe.txt
lab_3/source/: CMakeLists.txt  authors_lab1.h  authors_lab2.h  authors_lab3.h  main.cpp
lab_3/source/image/: bitmap_image.cpp  bitmap_image.h  pixel.h
lab_3/source/input_generator/: earth_orbit.cpp  input_generator.h  random_universe.cpp  random_universe_with_supermassive_blackhole.cpp  two_body_collision.cpp
lab_3/source/io/: image_parser.cpp  image_parser.h
lab_3/source/physics/: gravitation.h  mechanics.h
lab_3/source/plotting/: bounding_box.cpp  plotter.cpp  plotter.h  quadtree.cpp  universe.cpp
lab_3/source/quadtree/: quadtree.cpp  quadtree.h  quadtreeNode.cpp  quadtreeNode.h
lab_3/source/simulation/: barnes_hut_simulation.cpp  barnes_hut_simulation.h  barnes_hut_simulation_with_collisions.cpp  barnes_hut_simulation_with_collisions.h  common.cuh  constants.h  cuda_wrappers.cuh  naive_cuda_simulation.cu  naive_cuda_simulation.cuh  naive_parallel_simulation.cpp  naive_parallel_simulation.h  naive_sequential_simulation.cpp  naive_sequential_simulation.h
lab_3/source/structures/: bounding_box.cpp  bounding_box.h  universe.cpp  universe.h  vector2d.h
lab_3/source/utilities/: export.hpp  import.hpp
lab_3/test_input/: CMakeLists.txt  test_five_universe.txt  test_five_universe_after_calculate_forces.txt  test_five_universe_after_one_epoch.txt  test_four_ppws24_Z9RJ4_universe_2.txt
lab_3/test_lab1/: CMakeLists.txt  test.cpp  test_bounding_box.cpp  test_plotting.cpp  test_simulation.cpp  test_vector2d.cpp
lab_3/test_lab2/: CMakeLists.txt  test.cpp  test.h  test_ex2.cpp  test_ex3.cpp  test_ex4.cpp  test_ex5.cpp  utilities.h
lab_3/test_lab3/: CMakeLists.txt  reference_implementations.cu  reference_implementations.cuh  test.cpp  test.cu  test.cuh  test_a.cpp  test_a.cu  test_a.cuh  test_c.cpp  test_c.cu  test_c.cuh  test_e.cpp  test_e.cu  test_e.cuh  test_j.cpp  test_j.cu  test_m.cpp  test_m.cu  test_m.cuh  test_utilities.cu  test_utilities.cuh
